<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name ="past_session">Your Past Sessions: </string>

    <string name="app_name">M3</string>
    <string name="app_name_long">Mindful Meditative Minds</string>
    <string name="new_member">New Member</string>
    <string name="old_member">Already a Member</string>
    <string name="add_member">Sign Me Up!</string>

    <string name="enter_name">First and Last Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password2">Confirm Password</string>
    <string name="enter_age">Enter Age</string>

    <string name="name">Name: </string>
    <string name="age">Age: </string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="password2">Confirm Password: </string>

    <string name="find_me">Sign In</string>
    <string name="calibrate_button">Start Calibration</string>
    <string name="welcome">Welcome</string>
    <string name="calibration">Calibrate</string>
    <string name="meditation">Meditate</string>
    <string name="stroop">Mental Game</string>
    <string name="profile">Profile</string>

    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Elements:</string>

    <string name="play_again">Try Again!</string>
    <string name="back_menu">Back to Menu</string>

    <string name="dialog_title">Stroop</string>
    <string name="stroop_message">Stroop is a mental game where you are required to indicate the ink colour of what you see on the screen.
        For example, if you see the word "red" in red ink, click red.</string>
    <string name="ok">OK</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="connecting">Muse is trying to connect.</string>
    <string name="connectfail">Muse cannot connect.</string>
    <string name="connected">Muse has been connected.</string>
    <string name="connectagain">Connect</string>

    <string name="bluetooth">There is no Muse headband to connect.</string>
    <string name="signalQ">Muse is checking for signal quality.\nPlease adjust the headset around the areas not reported good.</string>
    <string name="back_to_signalQ">Muse will go back to signal quality check.</string>
    <string name="back_to_connect">Muse will go back to establish a connection.</string>

    <string name="calibrate">Muse will calibrate.</string>
    <string name="calibratedone">Muse is calibrated.</string>
    <string name="calibratestart">Muse is starting calibration.</string>
    <string name="calibratedisconnect">Muse is disconnected.</string>
    <string name="calibratefail">Calibration was not successful.</string>

    <string name="meditate">Meditation will start in a moment.\nClose your eyes and wait for the audio.</string>
    <string name="start_meditate">Close your eyes and listen to the audio.</string>
    <string name="graph_title">Meditation Performance </string>

    <string name="low_volume_message">Please turn up the volume to continue the meditation session.</string>
    <string name="left_ear">Left Ear</string>
    <string name="right_ear">Right Ear</string>
    <string name="left_fore">Left Forehead</string>
    <string name="right_fore">Right Forehead</string>

    <string name="question1">Red</string>
    <string name="question2">Blue</string>
    <string name="question3">XXXXXX</string>
    <string name="question4">Green</string>
    <string name="question5">Yellow</string>
    <string name="question6">XXX</string>
    <string name="answer1">Red</string>
    <string name="answer2">Green</string>
    <string name="answer3">Yellow</string>
    <string name="answer4">Green</string>
    <string name="answer5">Blue</string>
    <string name="answer6">Red</string>

    <string name="med_session">Session: </string>

    <string name="stroop_result_explanation">The Distractibility Task measures your ability to ignore irrelevant, distracting word information. These abilities are improved with meditation, because through this practice you are training your brain to no longer be distracted by internal or external influences.
</string>
    <string name="stoop_explanation_title">Distractibility Task</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_overview">OverviewActivity</string>

</resources>
