<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.interaxon.test.libmuse.BlankFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/enter_name"
        android:textColor="@color/Grey"
        android:hint="@string/enter_name"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/enter_username"
        android:textColor="@color/Grey"
        android:hint="@string/enter_username"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/Grey"
        android:hint="@string/enter_password"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password2"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/enter_password2"
        android:inputType="textPassword"
        android:textColor="@color/Grey"
        android:hint="@string/enter_password2"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/b_add_member"
        android:text="@string/add_member"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:background="@color/Blue"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/b_back_old_member"
        android:text="@string/old_member"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:textColor="@color/White"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
