<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Spinner
		android:id="@+id/muses_spinner"
		android:layout_width="match_parent"
		android:layout_height="60dp" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:orientation="horizontal" >
		<Button
			android:id="@+id/refresh"
			android:layout_width="100dp"
			android:layout_height="40dp"
			style="?android:attr/borderlessButtonStyle"
			android:text="@string/refresh"
			android:layout_weight="1"/>
		<View
			android:layout_width="1dp"
			android:layout_height="43dp"
			android:background="@android:color/holo_blue_light"
			android:layout_gravity="bottom"
			/>
		<Button
			android:id="@+id/connect"
			android:layout_width="100dp"
			android:layout_height="40dp"
			style="?android:attr/borderlessButtonStyle"
			android:text="@string/connect"
			android:layout_weight="1"/>
		<View
			android:layout_width="1dp"
			android:layout_height="43dp"
			android:background="@android:color/holo_blue_light"
			android:layout_gravity="bottom"
			/>
		<Button
			android:id="@+id/disconnect"
			android:layout_width="120dp"
			android:layout_height="40dp"
			style="?android:attr/borderlessButtonStyle"
			android:text="@string/disconnect"
			android:layout_weight="1"/>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:text="@string/status" />
	<TextView
		android:id="@+id/con_status"
		android:paddingTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:text="@string/undefined" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="30dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/mean"
			android:textSize="20sp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/current_mean"
			android:paddingLeft="15dp"
			android:textSize="20sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:textSize="16sp"
			android:layout_weight="1"
			android:paddingTop="40dp"
			android:text="@string/muse_elem" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:paddingTop="30dp">
		<TextView
			android:id="@+id/elem1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="16sp"
			android:text="@string/init_val" />
		<TextView
			android:id="@+id/elem2"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="16sp"
			android:text="@string/init_val" />
		<TextView
			android:id="@+id/elem3"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="16sp"
			android:text="@string/init_val" />
		<TextView
			android:id="@+id/elem4"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="16sp"
			android:text="@string/init_val" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<View
			android:layout_width="1dp"
			android:layout_height="43dp"
			android:background="@android:color/holo_blue_light"
			android:layout_gravity="bottom"
			/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/calibrate_button"
			style="?android:attr/borderlessButtonStyle"
			android:id="@+id/calibrate_button"/>
		<View
			android:layout_width="1dp"
			android:layout_height="43dp"
			android:background="@android:color/holo_blue_light"
			android:layout_gravity="bottom"
			/>


		<TextView
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:id="@+id/mean_text_view"
			android:textSize="18sp"
			android:visibility="invisible"
			android:paddingLeft="8dp"
			android:paddingRight="10dp"
			android:layout_weight="1"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_view_time"
			android:paddingLeft="20dp"
			android:layout_weight="1"
			android:textSize="15sp"/>



	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:orientation="horizontal" >
		<Button
			android:id="@+id/pause"
			android:layout_width="150dp"
			android:layout_height="40dp"
			style="?android:attr/borderlessButtonStyle"
			android:text="@string/pause" />
	</LinearLayout>

</LinearLayout>