<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context="MainPageFragment">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp" />

    <TextView
        android:id="@+id/app_name_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:text="@string/app_name_long"
        android:textColor="@color/Black"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launche_brain"
        android:layout_gravity="center"
        android:layout_weight="6.46"/>


    <Button
        android:id="@+id/b_new_member"
        android:text="@string/new_member"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/blue_button"
        style="@style/ButtonText"/>
    <Button
        android:id="@+id/b_old_member"
        android:text="@string/old_member"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/White"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/black_button"
        style="@style/ButtonText"/>

</LinearLayout>
