<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.interaxon.test.libmuse.MainPageFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:textColor="@color/Black"
        android:layout_gravity="center"
        android:layout_weight="4" />

    <Button
        android:id="@+id/b_meditation"
        android:text="@string/meditation"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/White"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/black_button"
        style="@style/ButtonText"/>

    <Button
        android:id="@+id/b_stroop"
        android:text="@string/stroop"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/White"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/black_button"
        style="@style/ButtonText"/>

    <Button
        android:id="@+id/b_profile"
        android:text="@string/profile"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/White"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/black_button"
        style="@style/ButtonText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3" />
</LinearLayout>