<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context=".Fragments.ConnectMuseFragment">

    <TextView
        android:id="@+id/signalQ"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/signalQ"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/left_ear"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/left_ear"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgb_le"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/le_bool"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/left_fore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/left_fore"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgb_lf"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/lf_bool"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/right_fore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/right_fore"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgb_rf"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/rf_bool"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/right_ear"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/right_ear"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgb_re"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/re_bool"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"/>

</LinearLayout>
